--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,20 @@
 .App-link {
   color: #61dafb;
 }
+html, body, #root {
+  height: 100%;
+  margin: 0;
+}
+
+.app-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1;
+}
 
 @keyframes App-logo-spin {
   from {
